--- a/default.css
+++ b/default.css
@@ -4,8 +4,8 @@ body {
 }
 
 header, footer {
-  background: #333;
-  color: white;
+  background: white;
+  color: black;
   text-align: center;
   padding: 10px;
 }
